--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,8 @@
   src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap');
+
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 
@@ -209,7 +211,7 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: Poppins-Bold;
+  font-family: Source Code Pro;
   font-size: 24px;
   color: #333333;
   line-height: 1.2;
@@ -230,17 +232,16 @@ iframe {
 }
 
 .input100 {
-  font-family: Poppins-Medium;
-  font-size: 15px;
+  font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New;
+  font-size: 14px;
   line-height: 1.5;
   color: #666666;
 
   display: block;
   width: 100%;
   background: #e6e6e6;
-  height: 50px;
-  border-radius: 25px;
-  padding: 0 30px 0 68px;
+  border-radius: 8px;
+  padding: 0 30px;
 }
 
 
