--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,10 +38,12 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap');
+
 body {
-    background-color: #f4f7fc;
+    background-color: #121212;
     font-weight: 400;
-    color: #384c6d;
+    color: rgb(232, 233, 229);
     line-height: 1.6
 }
 
@@ -174,7 +176,7 @@ select:hover {
  opacity:1;
  outline:0 none!important;
  box-shadow:0 3px 10px rgba(62,85,120,.045);
- background:rgba(255,255,255,1)
+ background:rgba(255,255,255,1);
 }
 input::-webkit-input-placeholder,
 select::-webkit-input-placeholder {
@@ -195,7 +197,7 @@ select::-webkit-input-placeholder {
 }
 
 .form-check-input[type="radio"] {
-    background-color: #fff !important;
+    background-color: #000 !important;
     height: auto;
     width: auto;
     font-size: inherit;
@@ -205,11 +207,11 @@ select::-webkit-input-placeholder {
 
 .form-check-input[type="radio"]:checked {
     background-color: rgba(9, 182, 109, .1) !important;
-    border-color: #06ba54;
+    border-color: #000;
 }
 
 .form-check-input:checked[type="radio"] {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%2306ba54'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23000000'/%3e%3c/svg%3e");
 }
 
 .api-create input[type="radio"] {
@@ -273,7 +275,7 @@ select {
     height: 50px;
     width: 100%;
     font-size: 13px;
-    background: rgba(255, 255, 255, .95);
+    background: #000;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
@@ -288,7 +290,7 @@ select {
     height: 50px;
     width: 100%;
     font-size: 13px;
-    background: rgba(255, 255, 255, .95);
+    background: #000;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
@@ -303,7 +305,7 @@ select {
     opacity: 1;
     outline: 0 none !important;
     box-shadow: 0 3px 10px rgba(62, 85, 120, .045);
-    background: rgba(255, 255, 255, 1)
+    background: #000;
 }
 
 .api-create input::-webkit-input-placeholder {
