--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,7 +241,7 @@ iframe {
 
   display: block;
   width: 100%;
-  background: #000000;
+  background: #e6e6e6;
   border-radius: 8px;
   padding: 0 30px;
 }
