--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap');
+
+
 /* latin-ext */
 @font-face {
     font-family: 'Poppins';
@@ -38,7 +41,7 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500;700&display=swap');
+
 
 body {
     background-color: #121212;
@@ -110,12 +113,18 @@ body {
     font-weight: 300;
 }
 
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #ffffff;
+    background-color: #212121;
+    border-color: #dee2e6 #dee2e6 #fff;
+}
+
 /* Card */
 .card {
-    border: 0;
-    box-shadow: 0 3px 10px rgba(62, 85, 120, .045);
+    border: 1px solid #212121;
     margin-bottom: 25px;
-    border-radius: 4px
+    border-radius: 4px;
+    background-color:#212121;
 }
 
 .card .card-body .card-title {
@@ -175,7 +184,7 @@ select:focus,
 select:hover {
  opacity:1;
  outline:0 none!important;
- box-shadow:0 3px 10px rgba(62,85,120,.045);
+ box-shadow:0 3px 10px rgba(30,30,30,.045);
  background:rgba(255,255,255,1);
 }
 input::-webkit-input-placeholder,
@@ -189,15 +198,16 @@ select::-webkit-input-placeholder {
 
 .form-control {
     padding: 10px 15px;
-    border-color: #e6e6e6;
+    border-color: #212121;
+    background-color:#121212;
     border-radius: 4px;
     height: auto;
-    color: #838d91;
+    color: #ffffff;
     font-weight: 300;
 }
 
 .form-check-input[type="radio"] {
-    background-color: #000 !important;
+    background-color: #212121 !important;
     height: auto;
     width: auto;
     font-size: inherit;
@@ -206,12 +216,12 @@ select::-webkit-input-placeholder {
 }
 
 .form-check-input[type="radio"]:checked {
-    background-color: rgba(9, 182, 109, .1) !important;
-    border-color: #000;
+    background-color: #212121 !important;
+    border-color: #ffffff;
 }
 
 .form-check-input:checked[type="radio"] {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23000000'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23ffffff'/%3e%3c/svg%3e");
 }
 
 .api-create input[type="radio"] {
@@ -219,7 +229,7 @@ select::-webkit-input-placeholder {
     width: auto;
     font-size: inherit;
     padding: 8px;
-    background-color: #f4f4f5 !important;
+    background-color: #212121 !important;
     border: 1px solid #e6e6e6;
 }
 
@@ -228,14 +238,14 @@ select::-webkit-input-placeholder {
 }
 
 .api-create .form-control:hover {
-    border-color: #dbdbdb
+    border-color: #505050
 }
 
 .api-create .form-control:focus {
-    border-color: #75b7ff;
+    border-color: #505050;
     box-shadow: none;
-    color: #384c6d;
-    box-shadow: 0 0 0 .2rem rgba(3, 122, 251, .25)
+    color: #ffffff;
+    box-shadow: 0 0 0 .2rem rgba(20, 20, 20, .25)
 }
 
 #newHeaderRow .form-control,
@@ -257,9 +267,7 @@ textarea {
 
 /* Code Mirror */
 .CodeMirror {
-    border-top: 1px solid #e6e6e6;
-    border-right: 1px solid #e6e6e6;
-    border-bottom: 1px solid #e6e6e6;
+    border: none;
     border-radius: 4px;
 }
 
@@ -275,7 +283,7 @@ select {
     height: 50px;
     width: 100%;
     font-size: 13px;
-    background: #000;
+    background: #121212;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
@@ -286,16 +294,19 @@ select {
 }
 
 .api-create select {
-    border: none;
+    border: 1px solid #212121;
     height: 50px;
     width: 100%;
-    font-size: 13px;
-    background: #000;
+    font-size: 16px;
+    background: #121212;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
-    color: #838d91;
+    color: #ffffff;
+    font-family:'Source Code Pro';
+    font-weight: 700;
+
 }
 
 .api-create input:active,
@@ -305,7 +316,7 @@ select {
     opacity: 1;
     outline: 0 none !important;
     box-shadow: 0 3px 10px rgba(62, 85, 120, .045);
-    background: #000;
+    background: #121212;
 }
 
 .api-create input::-webkit-input-placeholder {
@@ -318,7 +329,7 @@ select {
 
 /* Tabs */
 .nav-link {
-    color: #384c6d;
+    color: #515151;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
@@ -327,7 +338,7 @@ select {
 
 .nav-link.active,
 .nav-link:hover {
-    color: #037afb
+    color: #ffffff
 }
 
 .nav-tabs {
@@ -341,7 +352,7 @@ select {
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
-    background-color: #037afb
+    background-color: #ffffff
 }
 
 .nav-tabs .nav-link:hover {
@@ -577,16 +588,20 @@ select {
  transition:all .2s ease-in-out
 }
 
+.border-bottom {
+    border-bottom: 1px solid #212121 !important;
+}
+
 /* logging button */
 .logger {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Source Code Pro', sans-serif;
     display: inline-block;
     position: relative;
     width: 150px;
     height: 38px;
     border: thin solid #06ba54;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.5;
     border-radius: .25rem;
     text-align: center;
@@ -598,10 +613,11 @@ select {
     position: absolute;
     width: 50%;
     height: 100%;
-    background-color: rgb(229, 248, 240);
+    background-color: #06ba54;
     transition: all 0.15s ease;
     left: 0;
     z-index: 1;
+    color:#121212;
 }
 
 .logger.off {
@@ -611,7 +627,7 @@ select {
 
 .logger.off .switch {
     left: 50%;
-    background-color: #ffeaab;
+    background-color: #ffc107;
 }
 
 
