--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,7 +185,8 @@ select:hover {
  opacity:1;
  outline:0 none!important;
  box-shadow:0 3px 10px rgba(30,30,30,.045);
- background:rgba(255,255,255,1);
+ background:#121212 !important;
+ color:#fff !important
 }
 input::-webkit-input-placeholder,
 select::-webkit-input-placeholder {
@@ -251,7 +252,7 @@ select::-webkit-input-placeholder {
 #newHeaderRow .form-control,
 #newResponseRow .form-control,
 #newTemplateName {
-    border: 1px solid #eaeaea;
+    border: 1px solid #000;
 }
 
 .form-group {
@@ -294,6 +295,8 @@ select {
 }
 
 .api-create select {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     border: 1px solid #212121;
     height: 50px;
     width: 100%;
@@ -457,8 +460,8 @@ select {
 }
 
 .alert-info {
-    background: #ccdaff;
-    color: #284ebf;
+    background: #000;
+    color: #fff;
     border: none
 }
 
